# wintertoo

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: black.yml  continuous_integration.yml  pylint.yml
tests/: test_fields.py  test_schedule.py
tests/testdata/: test_schedule.json
wintertoo/: database.py  errors.py  fields.py  make_request.py  schedule.py  submit.py  utils.py  validate.py
wintertoo/data/: WINTER_fields.txt  __init__.py  db_secrets.csv  observing_request_schema.json  request.json  schedule_schema.json  scheduleconfig.json  winter_fields.txt
wintertoo/models/: __init__.py  image.py  program.py  too.py
