[tool.poetry]
name = "wintertoo"
version = "0.3.6"
description = ""
authors = [
    "Danielle Frostig <frostig@mit.edu>",
    "Viraj Karambelkar <viraj@astro.caltech.edu>",
    "Robert Stein <rdstein@caltech.edu>"
]
readme = "README.md"
homepage = "https://github.com/winter-telescope/wintertoo"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
pandas = ">=2.0.2"
astropy = ">=5.2.1"
astroplan = ">=0.8"
matplotlib = ">=3.7.0"
numpy = ">=1.24.2"
pytz = ">=2022.7.1"
psycopg = ">=3.1.8"
black = "^23.1.0"
isort = "^5.12.0"
pylint = "^2.16.2"
coveralls = ">=3.3.1"
jsonschema = ">=4.17.3"
psycopg-binary = ">=3.1.8"
sqlalchemy = ">=2.0.4"
pydantic = ">=1.10.5"
pre-commit = ">=3.2.2"
bcrypt = "^4.0.1"

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"
disable=["logging-fstring-interpolation"]
good-names=["ax", "ra", "df", "pi", "i"]
exclude-too-few-public-methods=["pydantic.*"]
extension-pkg-whitelist=["pydantic"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
