[build-system]
requires = ["setuptools>=45", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "wintertoo"
version = "0.3.7"
description = ""
authors = [
    {name = "Robert Stein", email = "rdstein@caltech.edu"},
    {name = "Danielle Frostig", email = "frostig@mit.edu"},
    {name = "Viraj Karambelkar", email = "viraj@astro.caltech.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Intended Audience :: Science/Research',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Scientific/Engineering :: Physics',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]
dependencies = [
    "pandas >= 2.0.0",
    "astropy",
    "astroplan",
    "matplotlib",
    "numpy",
    "pytz",
    "psycopg",
    "black == 23.1.0",
    "isort == 5.12.0",
    "pylint == 2.16.2",
    "coveralls",
    "jsonschema",
    "psycopg-binary",
    "sqlalchemy",
    "pydantic",
    "pre-commit",
    "bcrypt",
]

[project.urls]
homepage = "https://github.com/winter-telescope/wintertoo"


[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"
disable=["logging-fstring-interpolation"]
good-names=["ax", "ra", "df", "pi", "i"]
exclude-too-few-public-methods=["pydantic.*"]
extension-pkg-whitelist=["pydantic"]
